# Capsid-Modeling

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakelists.txt  Capsid.cpp  Capsid.h  Capsid_eqns.nb  Files.cpp  Files.h  Optimize.cpp  README.md  Sequence.h  main.cpp  utils.cpp
Capsid/: CMakeLists.txt  CSV.h  Capsid.cpp  Capsid.h  Defs.h  Optimize.cpp  Optimize.h  Utils.cpp  Utils.h  ico_generator.cpp  main.cpp
Capsid/icosahedron/: ico_generator.cpp  ico_generator.h  ico_optimize.cpp  ico_optimize.h
Capsid/icosaherdron/: ico_generator.cpp
